src/sass/style.sass
//Variables
$yellow:#FDECCE
$darkBlue: #262E5E
$lightBlue: #EBF8FF
$white: #ffffff

//Mixins
=flexRow()
    display: flex
    flex-flow: row
    flex-wrap: wrap
    justify-content: center
    align-items: center

=flexColumn()
    display: flex
    flex-flow: column
    flex-wrap: wrap
    justify-content: center
    align-items: center

*
    margin: unset
    box-sizing: border-box
    font-family: 'Mulish', sans-serif
    color: $darkBlue

#root
    overflow-x: hidden

.hide
    display: none

.logo
    color: $darkBlue !important
    font-weight: 900
    text-transform: uppercase
    @media screen and (max-width: 515px)
        display: none

.mobile-logo
    color: $darkBlue !important
    font-weight: 900
    text-transform: uppercase
    @media screen and (min-width: 515px)
        display: none

.nav-link
    text-transform: uppercase
    color: $darkBlue !important
    font-weight: 900

h1
    color: $darkBlue
    font-weight: 700
    letter-spacing: -2.5px
    font-size: 3em
    @media screen and (max-width: 835px)
        font-size: 2.5em

h3
    font-size: 1.75em
    font-weight: 700

.days, .times
    margin-top: 0
    margin-bottom: 0
    font-size: 12px
    @media screen and (max-width: 835px)
        display: none

.days
    font-weight: 700

.sub-menu
    background-color: $yellow

.request, .service-section-button, .profile-button
    background-color: $darkBlue
    border: none
    border-radius: unset
    color: white 
    font-weight: 800
    padding-top: 15px
    padding-bottom: 15px
    
.emergency, .contact-submit
    background-color: $yellow
    border: none
    padding: 10px
    border-radius: unset
    color: $darkBlue 
    font-weight: 800
    padding-top: 15px
    padding-bottom: 15px


.hero-section-container
    background-image:  linear-gradient($lightBlue, $white)

.hero-image
    background-color: white

.toggle
    border: none

.request-cta
    @media screen and (max-width: 835px)
        display: none

.request
    @media screen and (min-width: 1023px)
        max-width: 217.938px

.info-card-img, .top-section-image
    background-color: $white
    border: solid grey 1px
    width: 100%

.info-card-img
    max-height: 250px
    object-fit: cover

.section-spacer
    @media screen and (min-width: 768px)
        margin-bottom: 150px
        margin-top: 150px

.extra-spacer
    @media screen and (min-width: 768px)
        margin-bottom: 250px
        margin-top: 250px

.last-section
    @media screen and (min-width: 768px)
        margin-bottom: 250px
        margin-top: 250px
        padding-bottom: 100px

.office-hours
    font-weight: 900
    font-size: .8em

.contact-section
    background-color: $darkBlue

.contact-header, .contact-typography, .contact-copy
    color: $white

.form-label
    display: none

.contact-form
    background-color: $lightBlue

.footer-header
    text-transform: uppercase
    color: #6F6F6F
    font-weight: 900
    font-size: 1em

.footer-typography
    color: #6F6F6F
    font-size: 1em

.footer
    background-color: #F7F7F7

.hero-image-container, .service-section-container, .info-img-container
    position: relative

.hero-pink, .hero-teal, .hero-yellow, .service-sec-circle-purple, .service-sec-circle-yellow, .service-sec-circle-coral
    position: absolute

.hero-teal
    max-width: 20vw
    bottom: -25px
    right: 5px
    z-index: 1
    @media screen and (min-width: 767px)
        bottom: -110px
        right: -50px
    @media screen and (min-width: 1023px)
        bottom: -150px
        right: -75px

.hero-yellow
    z-index: 1
    max-width: 10vw
    bottom: -5px
    left: 100px
    @media screen and (min-width: 767px)
        bottom: -30px
        max-width: 7vw
    @media screen and (min-width: 1023px)
        left: 150px

.hero-pink
    z-index: 0
    max-width: 30vw
    left: -40px
    top: -50px

.service-sec-circle-purple
    max-width: 10vw
    z-index: 1
    bottom: 325px
    @media screen and (min-width: 767px)
        left: 350px
        max-width: 5vw
    @media screen and (min-width: 833px)
        left: 375px
    @media screen and (min-width: 1279px)
        left: 550px
        max-width: 3vw

.service-sec-circle-coral
    z-index: 0
    max-width: 30vw
    bottom: 175px
    right: 50px
    @media screen and (min-width: 374px)
        bottom: 150px
    @media screen and (min-width: 833px)
        bottom: 125px
    @media screen and (min-width: 1279px)
        bottom: 90px
        right: 150px

.service-sec-circle-yellow
    z-index: 0
    max-width: 50vw
    top: -50px
    right: 0px
    @media screen and (min-width: 767px)
        right: 375px
    @media screen and (min-width: 833px)
        right: 415px
    @media screen and (min-width: 1023px)
        right: 500px
    @media screen and (min-width: 1279px)
        right: 625px

